add bonus avaliacao de plataforma

--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
                     <span class="link-blue">Inscreva-se</span>
                 </p>
             </div>
+            <div class="group">
+                <p class="link-blue">Avalie nossa plataforma</p>
+                <div class="emojis">
+                    <p class="emoji" onclick="alert('Ficamos muito felizes com sua avaliação positiva!');">&#128512;</p>
+                    <p class="emoji" onclick="alert('Ficamos felizes com sua avaliação regular, estamos trabalhando para melhorá-la!');">&#128528;</p>
+                    <p class="emoji" onclick="alert('Desculpe por algum transtorno, por gentileza nos envie seu feedback!');prompt('Feedback:');alert('Agradecemos seu feedback!');">&#128543;</p>
+                </div>
+            </div>
             <div class="get-the-app">
                 <p class="get-app">Baixe o aplicativo</p>
                 <div class="download">
